--- a/client/package.json
+++ b/client/package.json
@@ -1,36 +1,33 @@
 {
   "name": "client",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "keywords": [],
   "repository": {},
   "license": "ISC",
   "author": "",
   "main": "index.js",
   "scripts": {
-    "predeploy": "npm run build",
     "build": "webpack --mode production",
     "start": "webpack-dev-server --mode development"
   },
   "dependencies": {
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-router-dom": "^6.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.17.5",
     "@babel/eslint-parser": "^7.17.0",
-    "@babel/preset-env": "^7.16.11",
+    "@babel/preset-env": "^7.18.2",
     "@babel/preset-react": "^7.16.7",
     "@babel/preset-typescript": "^7.16.7",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-    "@types/chrome": "0.0.174",
-    "@types/jest": "^27.0.3",
     "@types/node": "^16.11.25",
     "@types/node-sass": "^4.11.2",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
-    "@types/uuid": "^8.3.4",
     "babel-loader": "^8.2.3",
     "css-loader": "^6.6.0",
     "eslint": "^8.9.0",
@@ -55,5 +52,4 @@
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.7.4"
   },
-  "homepage": "https://blueputty01.github.io/notes-app-practice"
 }
